--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "kindred-cottage-backend",
+  "name": "06-jobs-api",
   "version": "1.0.0",
-  "description": "Backend repo for Kindred-Cottage project",
-  "main": "index.js",
+  "description": "",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
